<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@android:drawable/ic_menu_gallery"
        android:contentDescription="@string/app_name" />
    <Button
        android:id="@+id/Mitologi"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="450dp"
        android:text="@string/mitologi"
        android:fontFamily="@font/quicksand_regular"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/Konspirasi"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="400dp"
        android:text="@string/konspirasi"/>
    <Button
        android:id="@+id/Horor"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="350dp"
        android:text="@string/horor"/>
    <Button
        android:id="@+id/Alien"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="300dp"
        android:text="@string/alien"/>
    <Button
        android:id="@+id/Fiksi"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="250dp"
        android:text="@string/fiksi"/>
    <Button
        android:id="@+id/aboutme"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/aboutme"/>
</RelativeLayout>